src/objects/RuleCriteria__c.object
<CustomObject>
    <description>AFP - An Object to store the filter criterias to prevent duplicates on sObject</description>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsFuzzy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fuzzy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPhonetic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phonetic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <label>Rule</label>
        <referenceTo>Rule__c</referenceTo>
        <relationshipLabel>Rule Criterias</relationshipLabel>
        <relationshipName>RuleCriterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Rule Criteria</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>RC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>